# src/api/resources/user/user.controller.js
@@ -12,5 +12,28 @@ export default {
         } catch (error) {
             return res.status(500).send(error)
         }
+    },
+    async login(req, res) {
+        try {
+            const { value, error } = userService.validateLogin(req.body);
+            if (error) {
+                res.status(400).json(error)
+            }
+            const user = await User.findOne({ email: value.email })
+            if (!user) {
+                return res.status(401).json({
+                    "error": "unauthorized"
+                })
+            }
+            const authorization = await userService.validatePassword(value.password, user.password)
+            if(!authorization){
+                return res.status(401).json({
+                    "error": "unauthorized"
+                })
+            }
+            return res.json(user)
+        } catch (error) {
+            return res.status(500).send(error)
+        }
     }
 }
