# src/api/resources/user/user.service.js
@@ -5,6 +5,10 @@ export default {
         const salt = bcrypt.genSaltSync(10);
         return bcrypt.hashSync(plaintext, salt)
     },
+    validatePassword(plainText, encryptedPassword) {
+        console.log("params",plainText,encryptedPassword)
+        return bcrypt.compareSync(plainText, encryptedPassword)
+    },
     validateSignUp(body) {
         const schema = Joi.object().keys({
             firstName: Joi.string().required(),
@@ -17,6 +21,17 @@ export default {
             return { error }
         }
         value.password = this.encrypt(value.password)
+        return { value }
+    },
+    validateLogin(body) {
+        const schema = Joi.object().keys({
+            email: Joi.string().email().required(),
+            password: Joi.string().required()
+        });
+        const { value, error } = Joi.validate(body, schema);
+        if (error) {
+            return { error }
+        }
         return { value }
     }
 }
